--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@mui/x-data-grid": "^5.17.4",
+    "mongoose": "^6.6.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
