create register and validate with jwt

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.10.6",
     "@mui/x-data-grid": "^5.17.4",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "next": "12.3.0",
     "react": "18.2.0",
