--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "jose": "^4.11.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
