--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,10 @@
 MONGO_URL=
 JWT_SECRET_SEED=
+NEXTAUTH_SECRET
 
 #public variables
 NEXT_PUBLIC_TAX_RATE=0.15
+
+# Providers:
+GITHUB_ID=
+GITHUB_SECRET=
