--- a/.env.template
+++ b/.env.template
@@ -12,5 +12,9 @@ GITHUB_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+#Paypal
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
+
+PAYPAL_OAUTH_URL=
+PAYPAL_ORDERS_URL=
