--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/jsonwebtoken": "^8.5.9",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.33.0",
+    "formidable": "^2.1.1",
     "jose": "^4.11.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +34,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
